--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.22)
 set(CMAKE_CXX_STANDARD 20)
 
-set(ProductName "SparkleProjectTemplate")
+set(ProductName "Labi")
 
 project(${ProductName}
 	VERSION 1.0
